<resources>
    <string name="app_name">Komkum</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="new_songs">New music</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <string name="title_activity_bootom" translatable="false">MainActivity</string>
    <string name="title_activity_bottom2" translatable="false">MainActivity</string>
    <string name="facebook_app_id" translatable="false">359735438550940</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb359735438550940</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_book_reader" translatable="false">FullscreenActivity</string>
    <string name="title_activity_compose" translatable="false">ComposeActivity</string>
    <string name="recently_played">Recently played</string>
    <string name="new_albums">New Albums</string>
    <string name="made_for_you">Made for you</string>
    <string name="trending_artists">Trending artists</string>
    <string name="recommended_albums">Recommended albums</string>
    <string name="new_artists">New Artists</string>
    <string name="top_radio_stations" translatable="false">Top Radio stations</string>
    <string name="bestselling_products">Bestselling products</string>
    <string name="teams_in_your_area">Teams in your area</string>
    <string name="featured_prducts">Featured prducts</string>
    <string name="collections">Packages</string>
    <string name="browse_products">Browse products</string>
    <string name="see_more">See more</string>
    <string name="related_products">Related products</string>
    <string name="buy_with_team">Buy with team</string>
    <string name="buy_now">Buy now</string>
    <string name="reviews">Reviews</string>
    <string name="write_review">Write review</string>
    <string name="see_more_reviews">See more reviews</string>
    <string name="addto_package">Package</string>
    <string name="add_to">Add to</string>
    <string name="members">Members</string>
    <string name="products">Products</string>
    <string name="required_members">Required members</string>
    <string name="joined_members">Joined members</string>
    <string name="total_price">Total price</string>
    <string name="location">Location</string>
    <string name="expire_in">Expires in</string>
    <string name="your_commission">Your commission</string>
    <string name="join_team">Join Team</string>
    <string name="team_details">Team details</string>
    <string name="location_permission_info">The app need location permission to give you teams available in your area</string>
    <string name="grant_permission">Give permission</string>
    <string name="error_message">Something went wrong. Please try again.</string>
    <string name="commission_info">You will get 5% commission if users joins this team by your link and purchase the product</string>
    <string name="birr">ETB</string>
    <string name="discount">discount</string>
    <string name="team_expire_message">This team is already expired.
 Do you want to find other teams for this product?</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="team_expire_title">Team expired</string>
    <string name="wallet_transfer_message">Birr transferred to your wallet</string>
    <string name="wallet_transfer_error_message">Unable to transfer reward to your wallet</string>
    <string name="team_member_invitation_message">The team members must invite the remaining</string>
    <string name="phone">Phone</string>
    <string name="email">Email address</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="team_create_description">Convince others to buy together with you.</string>
    <string name="create_team">Create team</string>
    <string name="create_package">Create package</string>
    <string name="package_feature_description">Package is a feature to buy multiple products together with other peoples. You can add another products after creating the package</string>
    <string name="package_name">Package name</string>
    <string name="team_size_description">peoples must join this team to access discount</string>
    <string name="game_team_size_description">peoples must join this team to play this game. Invite your friends and get more points to win this game.</string>
    <string name="point">point</string>
    <string name="team_name">Team name</string>
    <string name="team_location_permission">The app need location Information to show this to other peoples so they can buy together with you.</string>
    <string name="start_playing">Start playing</string>
    <string name="join_game">Join players</string>
    <string name="sponsor">Sponsored by</string>
    <string name="required">Required Players</string>
    <string name="joined_players">Joined players</string>
    <string name="player_status">Status</string>
    <string name="remaining_day">Remaining days</string>
    <string name="game_instruction">Game instruction</string>
    <string name="game_instruction_details">Game can be played when the minimum number or players join to play the game. You can invite peoples and get more points.\n\n
        The Game will be active for 7 days after the minimum number of players join the game. Any people can play the game during this period.\n\n
        Top 3 players will get cash reward and there will be discount code reward for top player(which is decided by the product advertiser).\n\n
        The winners will be announced after the game completed and the cash reward transferred to winners wallet.</string>
    <string name="quiz_game_instruction">You have a minimum of 30 seconds to answer each questions.\n
       You cannot pause or abort the quiz. If you do, the system will invalidate the current question and redirect you to the next question.\n
       You can earn more point by inviting others to this quiz. \n
       Prize sponsored by
    </string>
    <string name="continue_text">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="invite_people">Invite peoples</string>
    <string name="top_player">You are in top</string>
    <string name="players">players</string>
    <string name="in_top_player"></string>
    <string name="game_winner">Congrats, you are a winner</string>
    <string name="collect_more_point">Collect more point to win</string>
    <string name="invite_friend_to_game">Invite your friends to play the game</string>
    <string name="add_more_product">You must add more than one products</string>
    <string name="remove_from_package">Remove from package</string>
    <string name="before_you_start_game">Before you start</string>
    <string name="trending_collections">Trending collections</string>
    <string name="active_teams">Active teams</string>
    <string name="your_collection">Your collections</string>
    <string name="games">Games</string>
    <string name="give_permission">Give permission</string>
    <string name="no_team_in_your_area">There is no team in your area for this product</string>
    <string name="find_team_in_your_area">Finding teams in your area</string>
    <string name="marketplace">Marketplace</string>
    <string name="entertainment">Entertainment</string>
    <string name="me">My account</string>
    <string name="add_new_address">Add new Address</string>
    <string name="shipping_address">Shipping address</string>
    <string name="no_product_in_cart">No products in this cart</string>
    <string name="cart">Cart</string>
    <string name="clear_cart">Clear cart?</string>
    <string name="remove_cart_message">You can\'t remove this product from cart. It\'s a member of packages</string>
    <string name="error">Error</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="cant_find_my_location">I can\'t find my location</string>
    <string name="create_address">Create address</string>
    <string name="fill_form">Fill the above form</string>
    <string name="unsupported_delivery_destination_message">we won\'t deliver to this city or address</string>
    <string name="discard">Discard?</string>
    <string name="not_deliver_to_address">We won\'t deliver to this city or address</string>
    <string name="select_near_city">Do you want to select near location?</string>
    <string name="no_thanks">No Thanks</string>
    <string name="pick_from_near_location_message">Currently we can\'t deliver to your exact address. But you can select nearest location and we will deliver to those address and you can pick from our store at that location</string>
    <string name="sorry">Sorry</string>
    <string name="create_new_address">Create new Address</string>
    <string name="use_current_address">Use current address</string>
    <string name="address_information">Address information</string>
    <string name="contact_information">Contact information</string>
    <string name="name">Name</string>
    <string name="specific_address">Address, street location</string>
    <string name="make_default_address">Make default address</string>
    <string name="order_complete_header_text">Thank you for shopping with us</string>
    <string name="order_code">Order code</string>
    <string name="items">Items</string>
    <string name="add_precise_location">add your precise location (nearest places)</string>
    <string name="cash_prize">cash prize</string>
    <string name="discount_code">discount code</string>
    <string name="transfer_prize_to_wallet_description">You can transfer your prize to your wallet</string>
    <string name="discount_code_reward_description">You can use this discount code when you order the product associated with this game</string>
    <string name="transfer_prize_to_wallet">Get Your Rewards</string>
    <string name="improve_recommendation">Improve recommendation</string>
    <string name="improve_listening_recommendation">Tune your listening experience</string>
    <string name="choose_category_to_improve_recommendation">You can improve your listening experience by selecting Music category, selecting genre for msuic, books and podcast</string>
    <string name="radio_station_recommendation">You can also start a radio station from your favorite songs or artists</string>
    <string name="current_address_selected">Your current address is selected as your default home address. Click the check box to change your home address.</string>
    <string name="we_will_help_you_find_your_place">We will help you find your place</string>
    <string name="done">Done</string>
</resources>