<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView205"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cash_prize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_prize_textview"
        style="@style/Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView205"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView205" />

    <TextView
        android:id="@+id/textView208"
        style="@style/Body3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:text="@string/transfer_prize_to_wallet_description"
        app:layout_constraintEnd_toStartOf="@+id/game_prize_textview"
        app:layout_constraintStart_toStartOf="@+id/textView205"
        app:layout_constraintTop_toBottomOf="@+id/textView205" />

    <TextView
        android:id="@+id/textView210"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/discount_code"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView208"
        app:layout_constraintTop_toBottomOf="@+id/textView208" />

    <TextView
        android:id="@+id/discount_code_textview"
        style="@style/Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView210"
        app:layout_constraintEnd_toEndOf="@+id/game_prize_textview"
        app:layout_constraintTop_toTopOf="@+id/textView210" />

    <TextView
        android:id="@+id/textView223"
        style="@style/Body3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:text="@string/discount_code_reward_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView210"
        app:layout_constraintTop_toBottomOf="@+id/textView210" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_product_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView223"
        tools:itemCount="1"
        tools:listitem="@layout/productlist_list_item" />

    <Button
        android:id="@+id/transfer_prize_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_rounded"
        android:enabled="false"
        android:text="@string/transfer_prize_to_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_product_recyclerview" />

</androidx.constraintlayout.widget.ConstraintLayout>